test/resources/lexer/passing/Whitespace.amy
object   Whitespace
  val    a: Int(32)   =   1
  val b: Int(32) = 2
  val c: Int(32) = 3
  val d: Int(32) = 4
end Whitespace
