test/resources/lexer/failing/InvalidToken.amy
object InvalidToken
  val a = 1 @ 2
end InvalidToken
